<resources>
    <string name="app_name">DiAPPetes</string>
    <string name="walking">Do you want to go for a walk?</string>
    <string name="channel_name">Some channel name</string>
    <string name="channel_description">Some channel description</string>
    <string name="main_toggle_step_tracking_button_text">ToggleButton</string>
    <string name="main_go_for_walk_text">Should we track your steps?</string>
    <string name="main_home_tab_text">Home</string>
    <string name="main_info_tab_text">Info</string>
    <string name="main_pet_tab_text">Pet</string>
    <string name="main_stat_tab_text">Stat</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_invalid_username">Invalid username</string>
    <string name="login_hack_me_in_text">Hack me in pls</string>
    <string name="login_sign_in_text">Sign in</string>
    <string name="login_register_text">Register</string>
    <string name="register_email_hint">email</string>
    <string name="register_submit_text">Submit</string>
    <string name="register_repeat_password_hint">Repeat password</string>
    <string name="register_password_hint">Password</string>
    <string name="register_username_already_exists">Username already exists</string>
    <string name="register_invalid_email">Invalid email</string>
    <string name="register_invalid_username">Invalid username</string>
    <string name="register_invalid_password">Invalid password</string>
    <string name="register_passwords_do_not_match">Passwords do not match</string>
    <string name="additional_data_form_first_name_hint">First name</string>
    <string name="additional_data_form_last_name_hint">Last name</string>
    <string name="additional_data_form_last_profession_hint">Profession</string>
    <string name="additional_data_form_weight_hint">Weight</string>
    <string name="additional_data_form_height_hint">Height</string>
    <string name="additional_data_daily_step_goal_hint">Daily step goal</string>
    <string name="additional_data_next">Next</string>
    <string name="additional_data_invalid_first_name">Invalid first name</string>
    <string name="additional_data_invalid_last_name">Invalid last name</string>
    <string name="additional_data_invalid_profession">Invalid profession</string>
    <string name="additional_data_invalid_weight">Invalid weight</string>
    <string name="additional_data_invalid_height">Invalid height</string>
    <string name="step_tracker_notification_title">Tracking your steps</string>
    <string name="step_tracker_service_description">Tracks a users steps</string>
    <string name="pet_image_description">My pet</string>
    <string name="stat_steps_taken_text">Steps taken</string>
    <string name="stat_weight_change_graph">Weight change</string>
    <string name="toolbar_navigation_button">Navigation</string>
    <string name="info_diabetes_title">General diabetes Information</string>
    <string name="info_diabetes_description">Type 2 diabetes is the most common type of diabetes and
        is characterized by insulin resistance. The insulin is ineffective in the body, resulting in
        rising blood sugar levels. To lower these blood sugar levels, the pancreas produces more
        insulin. Over time, this can exhaust the pancreas resulting in less insulin production and
        rising blood sugar levels.\nInsulin, a hormone produced by the pancreas, is essential for the
        processing of glucose from food in the body. Carbohydrates in food are broken down into
        glucose in the stomach and intestines. Glucose is then by cells in the intestines and
        released into the bloodstream to be transported throughout the body. Glucose is used for
        energy production in cells.\nHowever, glucose is unable to pass through the cell membrane of
        most cells. Insulin stimulates the uptake of glucose into cells. Being unable to produce or
        use insulin effectively leads to increased blood sugar levels (hyperglycaemia), which can
        cause serious health problems.
    </string>
    <string name="info_causes_title">Causes</string>
    <string name="info_causes_description">Type 2 diabetes is caused by several factors including
        genetic predisposition, increasing age and modifiable lifestyle factors such as:\n
        - Being overweight or obese\n
        - Unhealthy diet\n
        - Physical inactivity\n
        - Smoking\n
        - Certain medicines
    </string>
    <string name="info_complications_title">Complications</string>
    <string name="info_complications_description">Type 2 diabetes patients have an increased risk of
        developing serious diseases including:\n
        - Cardiovascular disease\n
        - Kidney damage\n
        - Nerve damage\n
        - Eye damage\n
        - Slow healing wounds\n
        - Alzheimer\'s disease\n

        In nearly all high-income countries, diabetes is the primary cause of blindness,
        cardiovascular disease, lower limb amputation and kidney failure.
    </string>
    <string name="info_management_title">Management</string>
    <string name="info_management_description">Type 2 diabetes can be managed through lifestyle
        modification including regular exercise, a healthy diet, maintaining a healthy body weight
        and smoking cessation.\nHowever, type 2 diabetes is a progressive disease, which means that
        the pancreas may not be able to produce enough insulin to keep the blood sugar level within
        the target range, regardless of the lifestyle modification. People with type 2 diabetes
        should then take oral medication to keep the blood sugar level within the target range.
        \nIf this is still not sufficient, insulin injections may be necessary.  The injections and
        oral medication are intended to be used in combination with regular exercise and healthy
        eating, not as a substitute.
    </string>
    <string name="info_stretch">How to stretch</string>
    <string name="info_stretch_description">Stretching is a way to physically exercise in which we flex or extend specific muscles,
        it is usually done to make the muscles feel better and to loosen them up to prevent injuries.
        It is a sort of exercise which can have equally important benefits as walking or running.
        Diabetes patients are frequently observed with limited joint mobility and this can lead to lower their quality of life.
        Stretching can help people recover from injuries faster, prevent them, gain flexibility and range of motion, reduce the risk of falling, and improve sleep.
        To reduce the risk of falling is very important in diabetes patients because it can mean having to stop exercising for a while because of an injury, which is not good for them.[1]
        Stretching exercises do not have to be necessarily done alone at home and can be practiced in different ways.
        Three very effective ways to stretch are yoga, tai chi and Pilates, they combine strengthening and movement with stretching for optimum results.
        Another way to gain flexibility is by doing aquatic exercises in a pool, especially for people who are overweight, water removes the body weight while reducing the risk of injury.[2]
        A few studies have been done about the benefits of stretching for the diabetes type 2 patients, but it is proven that 20 minutes of stretching has a significant effect on the reduction of the immediate blood glucose levels,
        and that the effects remain for 1 hour after finishing the stretching exercises.[3]
    </string>
    <string name="info_how_to">How to stretch correctly</string>
    <string name="info_how_to_description">Before beginning to stretch it is important to consult which exercises will be practiced with the doctor.
        It is recommended to stretch after the muscles have had the chance to warm up a little, for example after walking for 5 minutes.
        When we start stretching it is recommendable to complete at last one stretch per major muscle group (chest, back, arms, shoulders, legs and the calves),
        each stretch should last between 15 and 30 seconds and we should complete equal stretching in both sides of the body.
        It is important not to hold the breath while stretching and breathe deeply during the exercises to relax the muscles more.
        Stretching should lengthen the muscle to the point of mild comfort, not by stretching longer you gain more flexibility faster, stretching exercises shouldn’t hurt.
    </string>
    <string name="info_exercises">Basic stretching exercises</string>
    <string name="info_neck_look_forward_description">
        1 - Let your arms hanging loosely at the sides\n
        2 – Tilt your head first to one side then to the other\n
        3 – Hold 5 seconds in each side\n
        4 – Repeat 1 – 3 times\n
    </string>
    <string name="info_neck_look_to_the_side_description">
        1 - Let your arms hanging loosely at the sides\n
        2 – Tilt your head first to one side then to the other\n
        3 – Hold 5 seconds in each side\n
        4 – Repeat 1 – 3 times\n
    </string>
    <string name="info_shoulder_description">
        1 – Place right hand on the left shoulder\n
        2 – With the left hand, pull the right elbow across the chest toward left shoulder\n
        3 – Hold for 10 – 15 seconds\n
        4 – Repeat on the other side\n
    </string>
    <string name="info_back_description">
        1 – Stand with your hands on the hips\n
        2 – Gently twist the torso until stretch is felt\n
        3 – Hold for 10 – 15 seconds\n
        4 – Repeat on the other side\n
        5 – Keep your knees slightly flexed\n
    </string>
    <string name="info_ankle_description">
        1 – Stand and hold onto something to help keep balance or sit on a chair\n
        2 – Lift one foot and rotate the ankle 8 – 10 times clockwise, and the same counterclockwise\n
        3 – Repeat with the other foot\n
    </string>
    <string name="info_hamstring_description">
        1 –  Keep your knees slightly flexed\n
        2 – Stand or sit with your arms over your head\n
        3 – Hold one elbow with the hand from the opposite arm\n
        4 – Pull the elbow behind your head and gently lean to the side until stretch is felt\n
        5 – Hold for 10 – 15 seconds\n
        6 –  Repeat on the other side\n
    </string>
    <string name="info_hip_description">
        1 – Stand with feet pointed straight ahead, a little more than shoulder-width apart\n
        2 – Bend one knee and bend the hip towards it\n
        3 – Hold for 10 – 15 seconds\n
        4 – Repeat on the other side\n
        5 – If necessary, hold on to something for balance\n
    </string>
    <string name="info_tights_description">
        1 –  Sit on floor with left leg straight out in front\n
        2 – Bend right leg, cross right foot over and place it outside left knee\n
        3 – Bend left elbow and rest it outside right knee\n
        4 – Place right hand behind hips on floor\n
        5 –  Turn your head over right shoulder, rotate upper body right\n
        6 –   Hold for 10 – 15 seconds\n
        7 -  Repeat on the other side\n
    </string>
    <string name="info_lower_back_description">
        1 – Lie on floor, extend arms overhead, keep legs straight\n
        2 – Reach arms and legs in opposite directions\n
        3 – Stretch 5 sec and then relax\n
        4 – repeat 1 – 3 times\n
    </string>
    <string name="info_full_body_description">
        1 –   Sit on the floor with the right leg straight out in front\n
        2 –  Bend the left leg, cross left foot over and place it outside right the knee\n
        3 –  Pull the left knee across the body toward the opposite shoulder\n
        4 –  Hold for 10 – 20 seconds\n
        5 –  Repeat on the other side\n
    </string>
</resources>